--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="Encabezado_container">
             <div class="Logo">
                 <img id="img-principal"
-                    src="/Imagenes/Imagen_de_WhatsApp_2024-06-06_a_las_20.00.55_e4898921-removebg-preview.png"
+                    src="Imagenes/Imagen_de_WhatsApp_2024-06-06_a_las_20.00.55_e4898921-removebg-preview.png"
                     alt="Logo">
             </div>
             <div class="Llantas_Encabezado">
-                <img src="/Imagenes/R.png" alt="Llantas">
+                <img src="Imagenes/R.png" alt="Llantas">
             </div>
         </div>
 
